# deck

./: .clang-format  CMakeLists.txt  README.md
include/: deck.h
src/: CMakeLists.txt
src/include/deck/: deck.h
test/: CMakeLists.txt
test/src/: deck_test.cpp
